# AudioPluginHost_II

./: CMakeLists.txt  README.md  htmltest.html  xentest.py
Assets/: canvastesting.html
Source/: cmask.py
Source/AudioGraph/: xaudiograph.cpp  xaudiograph.h
Source/Common/: automation_sequence.h  bluenoise.h  clap_eventsequence.h  granularsynth.h  xap_breakpoint_envelope.h  xap_ipc.h  xap_utils.cpp  xap_utils.h  xaudioprocessor.cpp  xaudioprocessor.h  xen_ambisonics.h  xen_modulators.h
Source/Experimental/: bluenoise.h  clap_eventsequence.h  clap_xaudioprocessor.h  clapgenericgui.html  claphost.cpp  claphostserver.cpp  dejavurandom.h  fileplayer_xaudioprocessor.h  juce_xaudioprocessor.h  main.cpp  misctest.cpp  misctest2.cpp  noiseplethoraengine.h  offlineclaphost.cpp  offlineclaphost.h  pybindings.cpp  pybindtest.cpp  testprocessors.h  testsinesynth.h  wdl_resampler_adapter.cpp  wdl_resampler_adapter.h  xap_extensions.h  xap_generic_editor.h  xap_modulator.h  xap_notegenerator.cpp  xap_notegenerator.h  xap_slider.cpp  xap_slider.h  xap_utils.cpp  xap_utils.h  xapdsp.h  xapfactory.cpp  xapfactory.h  xapwithjucegui.h  xaudiograph.cpp  xaudiograph.h  xaudioprocessor.h  xclapeventlist.h  xen_modulators.h
Source/Experimental/paramexplorer/: main.cpp
Source/Experimental/xaps/: clap_xaudioprocessor.cpp  clap_xaudioprocessor.h  fileplayer_xaudioprocessor.cpp  fileplayer_xaudioprocessor.h  juce_xaudioprocessor.h  testprocessors.h  xap_memorybufferplayer.h  xap_modulator.h  xap_notegenerator.h
Source/Host/: claphost.cpp  claphost.h  claphostserver.cpp
Source/Plugins/: AudioFilePlayerPlugin.cpp  AudioFilePlayerPlugin.h  IOConfigurationWindow.cpp  IOConfigurationWindow.h  InternalPlugins.cpp  PluginGraph.cpp  PluginGraph.h  fileplayer.cpp  ipc_receiver.cpp  noiseplethora.html  noiseplethorasynth.cpp
Source/Python/: pybindings.cpp  pybindings_ex1.cpp
Source/PythonBindings/: gendyn.h  pybindings.cpp  pybindings_ambisonics.cpp  pybindings_ex1.cpp  pybindings_ex2.cpp  pybindings_ex3.cpp  pybindings_ex4.cpp  pybindings_gendyn.cpp
Source/Tests/: first_tests.cpp
Source/UI/: GraphEditorPanel.cpp  GraphEditorPanel.h  PluginWindow.h
Source/Xaps/: clap_xaudioprocessor.cpp  clap_xaudioprocessor.h
Source/cli/: grainserver.cpp  modifyspeed.cpp  modifywaveshape.cpp  scrub.h  xcli_utils.h
Source/granularsynth/: easing.cpp  easing.h  generate_metadata.py  generatesteps.js  grainfx.cpp  grainfx.h  grainoscillators.h  granularsynth.h  js_impl.cpp  modmatrixconf.json  xenfxbase.h  xgfx_dust.h
Source/granularsynth/juceplugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dashboardcomponent.cpp  dashboardcomponent.h
Source/granularsynth/juceplugin/IEM/: Conversions.h  HammerAitovGrid.h
html/: canvastest.html
libs/airwindows_limited/: README.md  airwin_consolidated_base.h
libs/airwindows_limited/plugins/: BitGlitterProc.cpp  CrunchCoat.cpp  CrunchCoat.h  Galactic3Ambisonic.cpp  Galactic3Ambisonic.h  Galactic3AmbisonicProc.cpp  kWoodRoom.cpp  kWoodRoom.h
python/: xentest.py  xentest2.py
